--- a/wyyx/src/assets/less/variable.less
+++ b/wyyx/src/assets/less/variable.less
@@ -1,6 +1,7 @@
 // 颜色定义规范
 @color-theme : #ffcd32;
 @color-background : #d44439;
+@color-background-list:#f2f3f4;
 @color-background-d : rgba(0, 0, 0, 0.3);
 @color-highlight-background : #333;
 @color-dialog-background : #666;
