--- a/wyyx/src/assets/less/reset.less
+++ b/wyyx/src/assets/less/reset.less
@@ -3,10 +3,11 @@
     padding: 0;
     box-sizing: border-box;
     outline: 0;
-		border: 0;
-		font-size: 100%;
-		font-weight: 400;
-		vertical-align: baseline;
+	border: 0;
+	font-size: 100%;
+	font-weight: 400;
+	vertical-align: baseline;
+	touch-action: none;
     -webkit-tap-highlight-color: transparent;
   }
 
